--- a/meat-app-starter/src/app/order/order.component.html
+++ b/meat-app-starter/src/app/order/order.component.html
@@ -23,30 +23,19 @@
               <p class="lead">Endereço de Entrega:</p>
             </div>
             <div class="col-sm-6 col-xs-12">
-              <div class="form-group" [class.has-success]="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"
-                                      [class.has-error]="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)">
-                <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Endereço</label>
-                <input type="text" class="form-control" #iptAddress="ngModel" required minlength="5" autocomplete="off" name="address" ngModel placeholder="Endereço">
-                <span class="help-block" *ngIf="iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-check"></i> Ok</span>
-                <span class="help-block" *ngIf="!iptAddress.valid && (iptAddress.dirty || iptAddress.touched)"><i class="fa fa-remove"></i>Campo Obrigatório</span>
-              </div>
+              <mt-input-content errorMessage="Esse campo é obrigatório e com 5 caracteres" label='Endereço'>
+                <input class="form-control" placeholder="Endereço" ngModel minlength="5" autocomplete="off" name="address" required  />
+              </mt-input-content>
             </div>
-            <div class="col-sm-2 col-xs-6">
-              <div class="form-group" [class.has-success]="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"
-                                      [class.has-error]="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)">
-                <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Número</label>
-                <input type="text" class="form-control" #iptNumber="ngModel" required autocomplete="off" name="number" ngModel placeholder="Número">
-                <span class="help-block" *ngIf="iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-check"></i> Ok</span>
-                <span class="help-block" *ngIf="!iptNumber.valid && (iptNumber.dirty || iptNumber.touched)"><i class="fa fa-remove"></i>Campo Obrigatório</span>
-              </div>
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-content errorMessage="Obrigatório e somente números" label='Number'>
+                <input class="form-control" placeholder="Number" pattern="^[0-9]*$" ngModel autocomplete="off" name="number" required/>
+              </mt-input-content>
             </div>
-            <div class="col-sm-4 col-xs-6">
-              <div class="form-group">
-                <label class="control-label sr-only" for="inputSuccess"><i class="fa fa-check"></i> Complemento</label>
-                <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
-                <span class="help-block"><i class="fa fa-remove"></i> Help block with error</span>
-              </div>
-
+            <div class="col-sm-3 col-xs-6">
+              <mt-input-content>
+                <input class="form-control" placeholder="Complemento" ngModel autocomplete="off" name="optional"/>
+              </mt-input-content>
             </div>
             <!-- /.col -->
           </div>
@@ -111,28 +100,8 @@
             <div class="col-sm-6 col-xs-12">
               <p class="lead">Formas de Pagamento:</p>
 
-                <div class="form-group">
-                   <div>
-                     <label>
-                       <div class="iradio_flat-red checked" aria-checked="false" aria-disabled="false"
-                           style="position: relative;">
-                           <input type="radio" name="r3" class="flat-red" checked="" style="position: absolute; opacity: 0;"/>
-                           <ins class="iCheck-helper" style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
-                       </div>
-                       Dinheiro
-                     </label>
-                   </div>
-                  <div>
-                    <label>
-                      <div class="iradio_flat-red" aria-checked="false" aria-disabled="false"
-                          style="position: relative;">
-                          <input type="radio" name="r3" class="flat-red" checked="" style="position: absolute; opacity: 0;"/>
-                          <ins class="iCheck-helper" style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins>
-                      </div>
-                      Cartão de Débito
-                    </label>
-                  </div>
-
+                <div class="form-group">                                    
+                  <mt-radio [options]='paymentOptions' name='paymentOption' ngModel></mt-radio>
                 </div>
 
             </div>
