--- a/meat-app-starter/src/styles.css
+++ b/meat-app-starter/src/styles.css
@@ -236,6 +236,13 @@ body {
 
 /*rstaurant detail*/
 
+.main-footer{
+  flex-grow: 0;
+  padding: 15px 0;
+  display: block;
+  background-color: #f5f5f5;
+}
+
 .detail-footer{
   padding:0px
 }
