--- a/meat-app-starter/src/app/order/order.component.html
+++ b/meat-app-starter/src/app/order/order.component.html
@@ -6,138 +6,78 @@
   <section class="invoice">
 
 
-        {{form.valid | json}}
-        {{form.value | json}}
+    {{form.valid | json}}
+    {{form.value | json}}
 
-        <form #form="ngForm" novalidate>
-          <div class="row">
-            <div class="col-xs-12">
-              <h2 class="page-header">
-                <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
-              </h2>
-            </div>
-          </div>                
-
-          <div class="row invoice-info">
-            <div class="col-xs-12">
-              <p class="lead">Endereço de Entrega:</p>
-            </div>
-            <div class="col-sm-6 col-xs-12">
-              <mt-input-content errorMessage="Esse campo é obrigatório e com 5 caracteres" label='Endereço'>
-                <input class="form-control" placeholder="Endereço" ngModel minlength="5" autocomplete="off" name="address" required  />
-              </mt-input-content>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <mt-input-content errorMessage="Obrigatório e somente números" label='Number'>
-                <input class="form-control" placeholder="Number" pattern="^[0-9]*$" ngModel autocomplete="off" name="number" required/>
-              </mt-input-content>
-            </div>
-            <div class="col-sm-3 col-xs-6">
-              <mt-input-content>
-                <input class="form-control" placeholder="Complemento" ngModel autocomplete="off" name="optional"/>
-              </mt-input-content>
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.row -->
-
-          <!-- Table row -->
-          <div class="row">
-            <div class="col-xs-12">
-              <p class="lead">Itens do Pedido:</p>
-            </div>
-            <div class="col-xs-12 table-responsive">
-
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th class="text-center">Quantidade</th>
-                  <th>Item</th>
-                  <th>Descrição</th>
-                  <th class="text-right">Subtotal</th>
-                  <th class="text-right"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  <td class="text-center">
-                    <a class="btn btn-sm"><i class="fa fa-minus"></i></a>
-                    1
-                    <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                  </td>
-                  <td>Cup Cake</td>
-
-                  <td>Recheado com doce de leite</td>
-                  <td class="text-right">R$ 10,00</td>
-                  <td class="text-right">
-                    <a class="btn btn-sm danger"><i class="fa fa-remove"></i></a>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="text-center">
-                    <a class="btn btn-sm"><i class="fa fa-minus"></i></a>
-                    1
-                    <a class="btn btn-sm"><i class="fa fa-plus"></i></a>
-                  </td>
-                  <td>Croissant</td>
-
-                  <td>Recheado com presunto e queijo</td>
-                  <td class="text-right">R$ 10,00</td>
-                  <td class="text-right">
-                    <a class="btn btn-sm danger "><i class="fa fa-remove"></i></a>
-                  </td>
-                </tr>
-
-                </tbody>
-              </table>
-            </div>
-            <!-- /.col -->
-          </div>
-          <!-- /.row -->
-
-          <div class="row">
-            <!-- accepted payments column -->
-            <div class="col-sm-6 col-xs-12">
-              <p class="lead">Formas de Pagamento:</p>
-
-                <div class="form-group">                                    
-                  <mt-radio [options]='paymentOptions' name='paymentOption' ngModel></mt-radio>
-                </div>
-
-            </div>
-            <!-- /.col -->
-            <div class="col-sm-6 col-xs-12">
-              <p class="lead">Frete e Total:</p>
-
-              <div class="table-responsive">
-                <table class="table">
-                  <tbody><tr>
-                    <th style="width:50%">Itens:</th>
-                    <td class="text-right">R$ 20,00</td>
-                  </tr>
-                  <tr>
-                    <th>Frete:</th>
-                    <td class="text-right">R$ 8,00</td>
-                  </tr>
-                  <tr>
-                    <th>Total:</th>
-                    <td class="text-right">R$ 28,00</td>
-                  </tr>
-                </tbody></table>
-              </div>
-            </div>
-            <!-- /.col -->
-          </div>
-
-        </form>
-
-        <div class="row">
-          <div class="col-xs-12">
-            <button href="order-summary.html" role="button" class="btn btn-success pull-right" [disabled]="!form.valid"><i class="fa fa-credit-card"></i> Concluir Pedido
-            </button>
-          </div>
+    <form #form="ngForm" novalidate>
+      <div class="row">
+        <div class="col-xs-12">
+          <h2 class="page-header">
+            <i class="fa fa-shopping-cart"></i> Finalize o seu pedido
+          </h2>
         </div>
+      </div>
 
-    </section>
+      <div class="row invoice-info">
+        <div class="col-xs-12">
+          <p class="lead">Endereço de Entrega:</p>
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <mt-input-content (clear)="cleanForm($event)" errorMessage="Esse campo é obrigatório e com 5 caracteres" label='Endereço'>
+            <input class="form-control" placeholder="Endereço" ngModel minlength="5" autocomplete="off" name="address"
+              required />
+          </mt-input-content>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-content errorMessage="Obrigatório e somente números" label='Number'>
+            <input class="form-control" placeholder="Number" pattern="^[0-9]*$" ngModel autocomplete="off" name="number"
+              required />
+          </mt-input-content>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-content>
+            <input class="form-control" placeholder="Complemento" ngModel autocomplete="off" name="optionalAddress" />
+          </mt-input-content>
+        </div>
+        <!-- /.col -->
+      </div>
+      <!-- /.row -->
+
+      <mt-order-items [items]="cartItems()" (decreaseQty)="decreaseQty($event)" (increaseQty)="increaseQty($event)"
+        (remove)="remove($event)">
+      </mt-order-items>
+
+      <div class="row">
+        <!-- accepted payments column -->
+        <div class="col-sm-6 col-xs-12">
+          <p class="lead">Formas de Pagamento:</p>
+
+          <div class="form-group">
+            <mt-radio [options]='paymentOptions' name='paymentOption' ngModel required></mt-radio>
+          </div>
+
+        </div>
+        <!-- /.col -->
+        <div class="col-sm-6 col-xs-12">
+          <p class="lead">Frete e Total:</p>
+          <mt-delivery-costs
+          [itemsValue]="itemsValue()"
+          [delivery]="deliveryCost"
+          ></mt-delivery-costs>          
+        </div>
+        <!-- /.col -->
+      </div>
+
+    </form>
+
+    <div class="row">
+      <div class="col-xs-12">
+        <button (click)="checkOrder(form.value)" href="order-summary.html" role="button" class="btn btn-success pull-right" [disabled]="!form.valid || itemsValue() === 0"><i
+            class="fa fa-credit-card"></i> Concluir Pedido
+        </button>
+      </div>
+    </div>
+
+  </section>
 </section>
 <!-- FIM DO CONTEUDO-->
