--- a/meat-app-starter/src/app/order/delivery-costs/delivery-costs.component.html
+++ b/meat-app-starter/src/app/order/delivery-costs/delivery-costs.component.html
@@ -2,7 +2,7 @@
   <table class="table">
     <tbody><tr>
       <th style="width:50%">Itens:</th>
-      <td class="text-right">{{itemValue | currency: 'BRL'}}</td>
+      <td class="text-right">{{itemsValue | currency: 'BRL'}}</td>
     </tr>
     <tr>
       <th>Frete:</th>
